--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
   </mat-sidenav>
   <mat-sidenav-content>
 
-
+    <div id="canvas"></div>
 
     <!-- Add Content Here -->
   </mat-sidenav-content>
