--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,3 +15,21 @@
   top: 0;
   z-index: 1;
 }
+
+#wrapper {
+  width: 1024px;
+  height: 768px;
+  margin: 50px auto;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+canvas {
+  border: 1px solid black;
+}
+
+@media only screen and (max-width: 1024px) {
+  #wrapper {
+      width: 100%;
+      height: 100%;
+  }
+}
