--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,9 +10,7 @@
     [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a *ngFor="let item of scene.objs" mat-list-item href="#">{{item.name}}</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
