--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,10 @@
     <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
   </button>
   <span>star-gameengine-editor</span>
+  <button type="button" mat-icon-button (click)="play()">
+    <mat-icon >play</mat-icon>
+    Play
+  </button>
   <span class="spacer"></span>
   <span>
     <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="sideright.toggle()">
