--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,14 @@
   <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="sideleft.toggle()">
     <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
   </button>
-  <span>star-gameengine-editor</span>
-  <button type="button" mat-icon-button (click)="play()">
-    <mat-icon >play</mat-icon>
+  <div class="title">star-gameengine-editor</div>
+  <button type="button" mat-flat-button (click)="play()" *ngIf="!isPlaying">
     Play
+    <mat-icon>play_arrow</mat-icon>
+  </button>
+  <button type="button" mat-flat-button color="warn" (click)="play()" *ngIf="isPlaying">
+    Stop
+    <mat-icon>stop</mat-icon>
   </button>
   <span class="spacer"></span>
   <span>
@@ -20,7 +24,7 @@
     [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false" position="start">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a *ngFor="let item of scene.objs" mat-list-item href="#" (click)="select(item)" >{{item.name}}</a>
+      <a *ngFor="let item of scene.objs" mat-list-item href="#" (click)="select(item)">{{item.name}}</a>
     </mat-nav-list>
   </mat-sidenav>
 
@@ -36,7 +40,8 @@
   <mat-sidenav-content>
 
     <div id="wrapper">
-      <canvas id="canvas" width="800" height="600"></canvas>
+      <canvas id="canvasedit" width="800" height="600" [hidden]="isPlaying"></canvas>
+      <canvas id="canvasplay" width="800" height="600" [hidden]="!isPlaying"></canvas>
     </div>
 
     <!-- Add Content Here -->
