--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -23,6 +23,9 @@
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
+mat-toolbar .title {
+  margin-right: 20px;}
+
 canvas {
   border: 1px solid black;
 }
