--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,11 @@
 .sidenav-container {
   height: 100%;
+  background-color: #eee;
 }
 
 .sidenav {
   width: 200px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .sidenav .mat-toolbar {
