Button to export

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,10 @@
     <mat-icon>stop</mat-icon>
   </button>
   <span class="spacer"></span>
+  <button type="button" mat-flat-button (click)="export()">
+    Export
+    <mat-icon>download</mat-icon>
+  </button>
   <span>
     <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="sideright.toggle()">
       <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
