--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,8 +12,10 @@
     <mat-icon>stop</mat-icon>
   </button>
   <span class="spacer"></span>
-  <button type="button" mat-flat-button (click)="export()">
-    Export
+  <button mat-icon-button type="button" (click)="import()">
+    <mat-icon>upload</mat-icon>
+  </button>
+  <button mat-icon-button type="button" (click)="export()">
     <mat-icon>download</mat-icon>
   </button>
   <span>
