--- a/src/app/dialogs/dialog-import/dialog-import.component.html
+++ b/src/app/dialogs/dialog-import/dialog-import.component.html
@@ -2,16 +2,31 @@
 <mat-dialog-content class="mat-typography">
   <h3>Import scene</h3>
   <div>
-    <input type="file">
+    <input
+      id="inputfile"
+      #inputfile
+      type="file"
+      (change)="onFileSelected()"
+      cdkFocusInitial
+    />
   </div>
   <div>
-    <mat-form-field appearance="fill">
+    <mat-form-field appearance="fill" [style.min-width]="'600px'">
       <mat-label>File Content</mat-label>
-      <textarea matInput></textarea>
+      <textarea
+        matInput
+        cdkTextareaAutosize
+        #autosize="cdkTextareaAutosize"
+        cdkAutosizeMinRows="1"
+        cdkAutosizeMaxRows="20"
+        [(ngModel)]="srcResult"
+      ></textarea>
     </mat-form-field>
   </div>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Install</button>
+  <button mat-button [mat-dialog-close]="true" (click)="import()">
+    Import
+  </button>
 </mat-dialog-actions>
