--- a/src/app/pages/edit/edit.component.scss
+++ b/src/app/pages/edit/edit.component.scss
@@ -26,7 +26,8 @@
 }
 
 mat-toolbar .title {
-  margin-right: 20px;}
+  margin-right: 20px;
+}
 
 canvas {
   border: 1px solid black;
@@ -34,12 +35,56 @@ canvas {
 
 @media only screen and (max-width: 1024px) {
   #wrapper {
-      width: 100%;
-      height: 100%;
+    width: 100%;
+    height: 100%;
   }
 }
 
-.selected, .selected:focus {
+/*
+ * Tree
+ */
+.example-tree-invisible {
+  display: none;
+}
+
+.example-tree ul,
+.example-tree li {
+  margin-top: 0;
+  margin-bottom: 0;
+  list-style-type: none;
+}
+
+/*
+ * This padding sets alignment of the nested nodes.
+ */
+.example-tree .mat-nested-tree-node div[role="group"] {
+  padding-left: 40px;
+}
+
+/*
+ * Padding for leaf nodes.
+ * Leaf nodes need to have padding so as to align with other non-leaf nodes
+ * under the same parent.
+ */
+.example-tree div[role="group"] > .mat-tree-node {
+  padding-left: 40px;
+}
+
+// Tree custom
+.selected,
+.selected:focus {
   border: 1px solid black;
   background-color: #ccc;
+}
+
+.mat-tree-node:hover {
+  background-color: #eee;
+}
+
+mat-tree-node {
+  padding-left: 40px;
+}
+
+.mat-tree-node {
+  cursor: pointer;
 }
