--- a/src/app/pages/edit/edit.component.html
+++ b/src/app/pages/edit/edit.component.html
@@ -50,50 +50,12 @@
     [opened]="(isHandset$ | async) === false"
     position="start"
   >
-    <mat-toolbar>Menu</mat-toolbar>
-    <mat-tree
-      [dataSource]="dataSource"
-      [treeControl]="treeControl"
-      class="example-tree"
-    >
-      <mat-tree-node
-        *matTreeNodeDef="let node"
-        matTreeNodeToggle
-        (click)="select(node)"
-        [ngClass]="{ selected: node == selected }"
-      >
-        {{ node.name }}
-      </mat-tree-node>
-      <!-- This is the tree node template for expandable nodes -->
-      <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
-        <div
-          class="mat-tree-node"
-          (click)="select(node)"
-          [ngClass]="{ selected: node == selected }"
-        >
-          <button
-            mat-icon-button
-            matTreeNodeToggle
-            [attr.aria-label]="'Toggle ' + node.name"
-          >
-            <mat-icon class="mat-icon-rtl-mirror">
-              {{
-                treeControl.isExpanded(node) ? "expand_more" : "chevron_right"
-              }}
-            </mat-icon>
-          </button>
-          {{ node.name }}
-        </div>
-        <!-- There is inline padding applied to this div using styles.
-              This padding value depends on the mat-icon-button width.  -->
-        <div
-          [class.example-tree-invisible]="!treeControl.isExpanded(node)"
-          role="group"
-        >
-          <ng-container matTreeNodeOutlet></ng-container>
-        </div>
-      </mat-nested-tree-node>
-    </mat-tree>
+    <mat-toolbar>Game Objects</mat-toolbar>
+    <app-panel-objects-tree
+      [objs]="objs"
+      [selected]="selected"
+      (onSelect)="select($event)"
+    ></app-panel-objects-tree>
   </mat-sidenav>
 
   <mat-sidenav
