fix: error message loading page

--- a/src/app/pages/edit/edit.component.html
+++ b/src/app/pages/edit/edit.component.html
@@ -52,7 +52,7 @@
   >
     <mat-toolbar>Game Objects</mat-toolbar>
     <app-panel-objects-tree
-      [objs]="objs"
+      [objs]="scene.objs"
       [selected]="selected"
       (onSelect)="select($event)"
     ></app-panel-objects-tree>
