--- a/src/app/pages/edit/edit.component.html
+++ b/src/app/pages/edit/edit.component.html
@@ -7,7 +7,7 @@
   >
     <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
   </button>
-  <div class="title">star-gameengine-editor</div>
+  <div class="title" [hidden]="(isHandset$ | async)">Star GameEngine Editor</div>
   <button type="button" mat-flat-button (click)="play()" *ngIf="!isPlaying">
     Play
     <mat-icon>play_arrow</mat-icon>
@@ -76,14 +76,10 @@
     <div id="wrapper">
       <canvas
         id="canvasedit"
-        width="800"
-        height="600"
         [hidden]="isPlaying"
       ></canvas>
       <canvas
         id="canvasplay"
-        width="800"
-        height="600"
         [hidden]="!isPlaying"
       ></canvas>
     </div>
