--- a/src/app/pages/edit/edit.component.scss
+++ b/src/app/pages/edit/edit.component.scss
@@ -19,10 +19,8 @@
 }
 
 #wrapper {
-  width: 1024px;
-  height: 600px;
-  margin: 50px auto;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  width: 100%;
+  height: 100%;
 }
 
 mat-toolbar .title {
@@ -31,6 +29,8 @@ mat-toolbar .title {
 
 canvas {
   border: 1px solid black;
+  width: 100%;
+  height: 100%;
 }
 
 @media only screen and (max-width: 1024px) {
