--- a/src/app/pages/edit/edit.component.scss
+++ b/src/app/pages/edit/edit.component.scss
@@ -21,12 +21,14 @@
 #wrapper {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 canvas {
   border: 1px solid black;
-  width: 99.8%;
-  height: 99.8%;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 @media only screen and (max-width: 1024px) {
