--- a/src/app/pages/edit/edit.component.html
+++ b/src/app/pages/edit/edit.component.html
@@ -5,7 +5,7 @@
   (onPlay)="play()"
   (onSideLeft)="sideleft.toggle()"
   (onSideRight)="sideright.toggle()"
-  >
+>
 </app-toolbar>
 
 <mat-sidenav-container class="sidenav-container" [hasBackdrop]="false">
@@ -41,14 +41,8 @@
 
   <mat-sidenav-content>
     <div id="wrapper">
-      <canvas
-        id="canvasedit"
-        [hidden]="isPlaying"
-      ></canvas>
-      <canvas
-        id="canvasplay"
-        [hidden]="!isPlaying"
-      ></canvas>
+      <canvas id="canvasedit" [hidden]="isPlaying"></canvas>
+      <canvas id="canvasplay" [hidden]="!isPlaying"></canvas>
     </div>
 
     <!-- Add Content Here -->
