--- a/src/app/pages/edit/toolbar/toolbar.component.html
+++ b/src/app/pages/edit/toolbar/toolbar.component.html
@@ -7,7 +7,7 @@
   >
     <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
   </button>
-  <div class="title" [hidden]="(isHandset$ | async)">Star GameEngine Editor</div>
+  <div class="title" [hidden]="isHandset$ | async">Star GameEngine Editor</div>
   <button
     type="button"
     mat-flat-button
