--- a/src/app/pages/edit/panels/panel-objects-tree/panel-objects-tree.component.scss
+++ b/src/app/pages/edit/panels/panel-objects-tree/panel-objects-tree.component.scss
@@ -1,7 +1,7 @@
 /*
  * Tree
  */
- .example-tree-invisible {
+.example-tree-invisible {
   display: none;
 }
 
@@ -57,8 +57,7 @@
   box-sizing: border-box;
   border-radius: 4px;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-              0 8px 10px 1px rgba(0, 0, 0, 0.14),
-              0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
 .cdk-drag-animating {
