feat: add PanInteraction

--- a/src/app/pages/edit/panels/panel-properties/panel-properties.component.html
+++ b/src/app/pages/edit/panels/panel-properties/panel-properties.component.html
@@ -7,10 +7,10 @@
   <h3>Position</h3>
   <mat-form-field class="example-form-field" appearance="fill">
     <mat-label>X</mat-label>
-    <input matInput type="text" [(ngModel)]="selected.position.x" />
+    <input matInput type="number" [(ngModel)]="selected.position.x" name="position-x" />
   </mat-form-field>
   <mat-form-field class="example-form-field" appearance="fill">
     <mat-label>Y</mat-label>
-    <input matInput type="text" [(ngModel)]="selected.position.y" />
+    <input matInput type="number" [(ngModel)]="selected.position.y" name="position-y" />
   </mat-form-field>
 </div>
