--- a/src/app/pages/edit/edit.component.scss
+++ b/src/app/pages/edit/edit.component.scss
@@ -4,8 +4,14 @@
 }
 
 .sidenav {
-  width: 200px;
+  width: 240px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+@media only screen and (max-width: 800px) {
+  .sidenav {
+    width: 180px;
+  }
 }
 
 .sidenav .mat-toolbar {
