--- a/src/app/pages/edit/edit.component.scss
+++ b/src/app/pages/edit/edit.component.scss
@@ -1,15 +1,17 @@
 .sidenav-container {
-  height: 93%;
+  height: 100%;
   background-color: #eee;
 }
 
 .sidenav {
+  padding-top: 64px;
   width: 240px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 @media only screen and (max-width: 800px) {
   .sidenav {
+    padding-top: 56px;
     width: 180px;
   }
 }
@@ -35,11 +37,4 @@ canvas {
   width: 100%;
   height: 100%;
   overflow: hidden;
-}
-
-@media only screen and (max-width: 1024px) {
-  #wrapper {
-    width: 100%;
-    height: 100%;
-  }
 }
