--- a/src/app/pages/edit/panels/panel-objects-tree/panel-objects-tree.component.html
+++ b/src/app/pages/edit/panels/panel-objects-tree/panel-objects-tree.component.html
@@ -1,57 +1,72 @@
-<mat-card class="panel-card">
-  <mat-card-title>Game Objects</mat-card-title>
-  <mat-card-content>
-    <button type="button" mat-raised-button (click)="newObject()">
-      <mat-icon>add</mat-icon>
-      Add
-    </button>
-    <mat-tree
-      [dataSource]="dataSource"
-      [treeControl]="treeControl"
-      class="example-tree"
-      cdkDropList
-      (cdkDropListDropped)="drop($event)"
+<mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
+  <mat-tree-node
+    *matTreeNodeDef="let node"
+    matTreeNodeToggle
+    matTreeNodePadding
+  >
+    <button mat-icon-button disabled></button>
+    <div
+      class="checklist-leaf-node"
+      [ngClass]="{
+        'drop-above':
+          dragNodeExpandOverArea === 'above' && dragNodeExpandOverNode === node,
+        'drop-below':
+          dragNodeExpandOverArea === 'below' && dragNodeExpandOverNode === node,
+        'drop-center':
+          dragNodeExpandOverArea === 'center' && dragNodeExpandOverNode === node
+      }"
+      draggable="true"
+      (dragstart)="handleDragStart($event, node)"
+      (dragover)="handleDragOver($event, node)"
+      (drop)="handleDrop($event, node)"
+      (dragend)="handleDragEnd($event)"
     >
-      <mat-tree-node
-        *matTreeNodeDef="let node"
-        matTreeNodeToggle
-        (click)="select(node)"
-        [ngClass]="{ selected: node == selected }"
-        cdkDrag
-        class="example-box"
-      >
-        <div class="example-custom-placeholder" *cdkDragPlaceholder></div>
-        {{ node.name }}
-      </mat-tree-node>
-      <!-- This is the tree node template for expandable nodes -->
-      <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
-        <div
-          class="mat-tree-node"
-          (click)="select(node)"
-          [ngClass]="{ selected: node == selected }"
-        >
-          <button
-            mat-icon-button
-            matTreeNodeToggle
-            [attr.aria-label]="'Toggle ' + node.name"
-          >
-            <mat-icon class="mat-icon-rtl-mirror">
-              {{
-                treeControl.isExpanded(node) ? "expand_more" : "chevron_right"
-              }}
-            </mat-icon>
-          </button>
-          {{ node.name }}
-        </div>
-        <!-- There is inline padding applied to this div using styles.
-              This padding value depends on the mat-icon-button width.  -->
-        <div
-          [class.example-tree-invisible]="!treeControl.isExpanded(node)"
-          role="group"
-        >
-          <ng-container matTreeNodeOutlet></ng-container>
-        </div>
-      </mat-nested-tree-node>
-    </mat-tree>
-  </mat-card-content>
-</mat-card>
+      {{ node.item }}
+    </div>
+  </mat-tree-node>
+
+  <mat-tree-node
+    *matTreeNodeDef="let node; when: hasNoContent"
+    matTreeNodePadding
+  >
+    <button mat-icon-button disabled></button>
+    <mat-form-field>
+      <input matInput #itemValue placeholder="New item..." />
+    </mat-form-field>
+    <button mat-button (click)="saveNode(node, itemValue.value)">Save</button>
+  </mat-tree-node>
+
+  <mat-tree-node *matTreeNodeDef="let node; when: hasChild" matTreeNodePadding>
+    <button
+      mat-icon-button
+      matTreeNodeToggle
+      [attr.aria-label]="'toggle ' + node.filename"
+    >
+      <mat-icon class="mat-icon-rtl-mirror">
+        {{ treeControl.isExpanded(node) ? "expand_more" : "chevron_right" }}
+      </mat-icon>
+    </button>
+    <div
+      [ngClass]="{
+        'drop-above':
+          dragNodeExpandOverArea === 'above' && dragNodeExpandOverNode === node,
+        'drop-below':
+          dragNodeExpandOverArea === 'below' && dragNodeExpandOverNode === node,
+        'drop-center':
+          dragNodeExpandOverArea === 'center' && dragNodeExpandOverNode === node
+      }"
+      draggable="true"
+      (dragstart)="handleDragStart($event, node)"
+      (dragover)="handleDragOver($event, node)"
+      (drop)="handleDrop($event, node)"
+      (dragend)="handleDragEnd($event)"
+    >
+      {{ node.item }}
+    </div>
+    <button mat-icon-button (click)="addNewItem(node)">
+      <mat-icon>add</mat-icon>
+    </button>
+  </mat-tree-node>
+</mat-tree>
+
+<span #emptyItem></span>
