--- a/src/app/pages/edit/panels/panel-objects-tree/panel-objects-tree.component.scss
+++ b/src/app/pages/edit/panels/panel-objects-tree/panel-objects-tree.component.scss
@@ -1,106 +1,13 @@
-/*
- * Tree
- */
-.example-tree-invisible {
-  display: none;
+.drop-above {
+  border-top: 10px solid #dddddd;
+  margin-top: -10px;
 }
 
-.example-tree ul,
-.example-tree li {
-  margin-top: 0;
-  margin-bottom: 0;
-  list-style-type: none;
+.drop-below {
+  border-bottom: 10px solid #dddddd;
+  margin-bottom: -10px;
 }
 
-/*
- * This padding sets alignment of the nested nodes.
- */
-.example-tree .mat-nested-tree-node div[role="group"] {
-  padding-left: 40px;
-}
-
-/*
- * Padding for leaf nodes.
- * Leaf nodes need to have padding so as to align with other non-leaf nodes
- * under the same parent.
- */
-.example-tree div[role="group"] > .mat-tree-node {
-  padding-left: 40px;
-}
-
-// Drag Drop
-
-.example-tree {
-  max-width: 100%;
-  min-height: 60px;
-  display: block;
-  border-radius: 4px;
-  overflow: hidden;
-}
-
-.example-box {
-  padding: 20px 10px;
-  border-bottom: solid 1px #ccc;
-  color: rgba(0, 0, 0, 0.87);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  box-sizing: border-box;
-  cursor: move;
-  background: white;
-  font-size: 14px;
-}
-
-.cdk-drag-preview {
-  box-sizing: border-box;
-  border-radius: 4px;
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
-}
-
-.cdk-drag-animating {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
-.example-box:last-child {
-  border: none;
-}
-
-.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
-.example-custom-placeholder {
-  background: #ccc;
-  border: dotted 3px #999;
-  min-height: 60px;
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
-// Tree custom
-.selected,
-.selected:focus {
-  border: 1px solid black;
-  background-color: #3f51b5;
-  color: #eee;
-}
-
-.mat-tree-node:hover {
-  background-color: #eee;
-  color: inherit;
-}
-
-.selected,
-.selected.mat-tree-node:hover {
-  background-color: #4558be;
-  color: #eee;
-}
-
-mat-tree-node {
-  padding-left: 40px;
-}
-
-.mat-tree-node {
-  cursor: pointer;
+.drop-center {
+  background-color: #dddddd;
 }
