--- a/src/app/pages/edit/panels/panel-objects-tree/panel-objects-tree.component.scss
+++ b/src/app/pages/edit/panels/panel-objects-tree/panel-objects-tree.component.scss
@@ -11,3 +11,13 @@
 .drop-center {
   background-color: #dddddd;
 }
+
+.selected,
+.selected.mat-tree-node:hover {
+  background-color: #4558be;
+  color: #eee;
+}
+
+div[draggable] {
+  cursor: pointer;
+}
