--- a/src/app/pages/edit/panels/panel-objects-tree/panel-objects-tree.component.scss
+++ b/src/app/pages/edit/panels/panel-objects-tree/panel-objects-tree.component.scss
@@ -21,3 +21,12 @@
 div[draggable] {
   cursor: pointer;
 }
+
+.drag-text {
+  flex: auto;
+}
+
+mat-tree-node:hover {
+  background-color: #eee;
+}
+
