feat: delete object

--- a/src/app/pages/edit/panels/panel-objects-tree/panel-objects-tree.component.html
+++ b/src/app/pages/edit/panels/panel-objects-tree/panel-objects-tree.component.html
@@ -57,6 +57,9 @@
         <button mat-icon-button (click)="newObject(node)">
           <mat-icon>add</mat-icon>
         </button>
+        <button mat-icon-button (click)="deleteObject(node)" color="warn">
+          <mat-icon>delete</mat-icon>
+        </button>
       </mat-tree-node>
     </mat-tree>
 
