feat: create circle objects

--- a/src/app/pages/edit/dialogs/dialog-newcircle/dialog-newcircle.component.html
+++ b/src/app/pages/edit/dialogs/dialog-newcircle/dialog-newcircle.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>New Rect</h2>
+<h2 mat-dialog-title>New Circle</h2>
 <mat-dialog-content class="mat-typography">
   <mat-form-field class="example-form-field" appearance="fill">
     <mat-label>Name</mat-label>
@@ -14,12 +14,12 @@
     <input matInput type="number" [(ngModel)]="params.y" name="position-y" />
   </mat-form-field>
   <mat-form-field class="example-form-field" appearance="fill">
-    <mat-label>Width</mat-label>
-    <input matInput type="number" [(ngModel)]="params.w" name="width" />
+    <mat-label>Radius</mat-label>
+    <input matInput type="number" [(ngModel)]="params.radius" name="radius" />
   </mat-form-field>
   <mat-form-field class="example-form-field" appearance="fill">
-    <mat-label>Height</mat-label>
-    <input matInput type="number" [(ngModel)]="params.h" name="height" />
+    <mat-label>Max Sides</mat-label>
+    <input matInput type="number" [(ngModel)]="params.maxSides" name="maxsides" />
   </mat-form-field>
   <mat-form-field class="example-form-field" appearance="fill">
     <mat-label>Angle</mat-label>
