--- a/src/app/pages/edit/dialogs/dialog-newcircle/dialog-newcircle.component.html
+++ b/src/app/pages/edit/dialogs/dialog-newcircle/dialog-newcircle.component.html
@@ -19,7 +19,12 @@
   </mat-form-field>
   <mat-form-field class="example-form-field" appearance="fill">
     <mat-label>Max Sides</mat-label>
-    <input matInput type="number" [(ngModel)]="params.maxSides" name="maxsides" />
+    <input
+      matInput
+      type="number"
+      [(ngModel)]="params.maxSides"
+      name="maxsides"
+    />
   </mat-form-field>
   <mat-form-field class="example-form-field" appearance="fill">
     <mat-label>Angle</mat-label>
