--- a/src/app/pages/edit/dialogs/dialog-newcircle/dialog-newcircle.component.html
+++ b/src/app/pages/edit/dialogs/dialog-newcircle/dialog-newcircle.component.html
@@ -34,6 +34,7 @@
     <mat-label>Color</mat-label>
     <input matInput type="text" [(ngModel)]="params.color" name="color" />
   </mat-form-field>
+  <mat-checkbox class="example-margin" [(ngModel)]="params.static">Static</mat-checkbox>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Cancel</button>
