--- a/src/app/pages/edit/edit.component.html
+++ b/src/app/pages/edit/edit.component.html
@@ -5,6 +5,7 @@
   (onPlay)="play()"
   (onSideLeft)="sideleft.toggle()"
   (onSideRight)="sideright.toggle()"
+  (onImport)="import($event)"
 >
 </app-toolbar>
 
@@ -16,11 +17,12 @@
     [mode]="'over'"
     [opened]="(isHandset$ | async) === false"
     position="start"
-  >
+    >
     <app-panel-objects-tree
-      [objs]="scene.objs"
-      [selected]="selected"
-      (onSelect)="select($event)"
+    [objs]="scene.objs"
+    [selected]="selected"
+    (onSelect)="select($event)"
+    *ngIf="!loading"
     >
     </app-panel-objects-tree>
   </mat-sidenav>
