--- a/src/app/pages/edit/dialogs/dialog-newrect/dialog-newrect.component.html
+++ b/src/app/pages/edit/dialogs/dialog-newrect/dialog-newrect.component.html
@@ -29,7 +29,9 @@
     <mat-label>Color</mat-label>
     <input matInput type="text" [(ngModel)]="params.color" name="color" />
   </mat-form-field>
-  <mat-checkbox class="example-margin" [(ngModel)]="params.static">Static</mat-checkbox>
+  <mat-checkbox class="example-margin" [(ngModel)]="params.static"
+    >Static</mat-checkbox
+  >
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Cancel</button>
