--- a/src/app/pages/edit/panels/panel-properties/panel-properties.component.html
+++ b/src/app/pages/edit/panels/panel-properties/panel-properties.component.html
@@ -28,6 +28,8 @@
       <mat-label>Angle</mat-label>
       <input matInput type="number" [(ngModel)]="selected.angle" name="angle" />
     </mat-form-field>
-    <mat-checkbox class="example-margin" [(ngModel)]="selected.static">Static</mat-checkbox>
+    <mat-checkbox class="example-margin" [(ngModel)]="selected.static"
+      >Static</mat-checkbox
+    >
   </mat-card-content>
 </mat-card>
