--- a/src/app/pages/edit/dialogs/dialog-newcircle/dialog-newcircle.component.html
+++ b/src/app/pages/edit/dialogs/dialog-newcircle/dialog-newcircle.component.html
@@ -1,46 +1,47 @@
-<h2 mat-dialog-title>New Circle</h2>
-<mat-dialog-content class="mat-typography">
-  <mat-form-field class="example-form-field" appearance="fill">
-    <mat-label>Name</mat-label>
-    <input matInput type="text" [(ngModel)]="params.name" />
-  </mat-form-field>
-  <h3>Position</h3>
-  <mat-form-field class="example-form-field" appearance="fill">
-    <mat-label>X</mat-label>
-    <input matInput type="number" [(ngModel)]="params.x" name="position-x" />
-  </mat-form-field>
-  <mat-form-field class="example-form-field" appearance="fill">
-    <mat-label>Y</mat-label>
-    <input matInput type="number" [(ngModel)]="params.y" name="position-y" />
-  </mat-form-field>
-  <mat-form-field class="example-form-field" appearance="fill">
-    <mat-label>Radius</mat-label>
-    <input matInput type="number" [(ngModel)]="params.radius" name="radius" />
-  </mat-form-field>
-  <mat-form-field class="example-form-field" appearance="fill">
-    <mat-label>Max Sides</mat-label>
-    <input
-      matInput
-      type="number"
-      [(ngModel)]="params.maxSides"
-      name="maxsides"
-    />
-  </mat-form-field>
-  <mat-form-field class="example-form-field" appearance="fill">
-    <mat-label>Angle</mat-label>
-    <input matInput type="number" [(ngModel)]="params.angle" name="angle" />
-  </mat-form-field>
-  <mat-form-field class="example-form-field" appearance="fill">
-    <mat-label>Color</mat-label>
-    <input matInput type="text" [(ngModel)]="params.color" name="color" />
-  </mat-form-field>
-  <mat-checkbox class="example-margin" [(ngModel)]="params.static"
-    >Static</mat-checkbox
-  >
-</mat-dialog-content>
-<mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-button [mat-dialog-close]="true" (click)="create()">
-    Create
-  </button>
-</mat-dialog-actions>
+<form (submit)="create()">
+  <h2 mat-dialog-title>New Circle</h2>
+  <mat-dialog-content class="mat-typography">
+    <mat-form-field class="example-form-field" appearance="fill">
+      <mat-label>Name</mat-label>
+      <input matInput type="text" [formControl]="formName" name="name" required />
+      <mat-error *ngIf="formName.invalid">Campo obrigatório</mat-error>
+    </mat-form-field>
+    <h3>Position</h3>
+    <mat-form-field class="example-form-field" appearance="fill">
+      <mat-label>X</mat-label>
+      <input matInput type="number" [(ngModel)]="params.x" name="position-x" />
+    </mat-form-field>
+    <mat-form-field class="example-form-field" appearance="fill">
+      <mat-label>Y</mat-label>
+      <input matInput type="number" [(ngModel)]="params.y" name="position-y" />
+    </mat-form-field>
+    <mat-form-field class="example-form-field" appearance="fill">
+      <mat-label>Radius</mat-label>
+      <input matInput type="number" [(ngModel)]="params.radius" name="radius" />
+    </mat-form-field>
+    <mat-form-field class="example-form-field" appearance="fill">
+      <mat-label>Max Sides</mat-label>
+      <input
+        matInput
+        type="number"
+        [(ngModel)]="params.maxSides"
+        name="maxsides"
+      />
+    </mat-form-field>
+    <mat-form-field class="example-form-field" appearance="fill">
+      <mat-label>Angle</mat-label>
+      <input matInput type="number" [(ngModel)]="params.angle" name="angle" />
+    </mat-form-field>
+    <mat-form-field class="example-form-field" appearance="fill">
+      <mat-label>Color</mat-label>
+      <input matInput type="text" [(ngModel)]="params.color" name="color" />
+    </mat-form-field>
+    <mat-checkbox class="example-margin" [(ngModel)]="params.static" name="static"
+      >Static</mat-checkbox
+    >
+  </mat-dialog-content>
+  <mat-dialog-actions align="end">
+    <button mat-button mat-dialog-close>Cancel</button>
+    <button mat-button type="submit">Create</button>
+  </mat-dialog-actions>
+</form>
