--- a/src/app/pages/edit/dialogs/dialog-newrect/dialog-newrect.component.html
+++ b/src/app/pages/edit/dialogs/dialog-newrect/dialog-newrect.component.html
@@ -3,7 +3,13 @@
   <mat-dialog-content class="mat-typography">
     <mat-form-field class="example-form-field" appearance="fill">
       <mat-label>Name</mat-label>
-      <input matInput type="text" [formControl]="formName" name="name" required />
+      <input
+        matInput
+        type="text"
+        [formControl]="formName"
+        name="name"
+        required
+      />
       <mat-error *ngIf="formName.invalid">Campo obrigatório</mat-error>
     </mat-form-field>
     <h3>Position</h3>
@@ -31,7 +37,10 @@
       <mat-label>Color</mat-label>
       <input matInput type="text" [(ngModel)]="params.color" name="color" />
     </mat-form-field>
-    <mat-checkbox class="example-margin" [(ngModel)]="params.static" name="static"
+    <mat-checkbox
+      class="example-margin"
+      [(ngModel)]="params.static"
+      name="static"
       >Static</mat-checkbox
     >
   </mat-dialog-content>
