--- a/src/app/pages/edit/panels/panel-properties/panel-properties.component.html
+++ b/src/app/pages/edit/panels/panel-properties/panel-properties.component.html
@@ -1,9 +1,9 @@
 <mat-card class="panel-card">
   <mat-card-title>Properties</mat-card-title>
-  <mat-card-content *ngIf="selected">
+  <mat-card-content *ngIf="gameService.selected">
     <mat-form-field class="example-form-field" appearance="fill">
       <mat-label>Name</mat-label>
-      <input matInput type="text" [(ngModel)]="selected.name" />
+      <input matInput type="text" [(ngModel)]="gameService.selected.name" />
     </mat-form-field>
     <h3>Position</h3>
     <mat-form-field class="example-form-field" appearance="fill">
@@ -11,7 +11,7 @@
       <input
         matInput
         type="number"
-        [(ngModel)]="selected.position.x"
+        [(ngModel)]="gameService.selected.position.x"
         name="position-x"
       />
     </mat-form-field>
@@ -20,15 +20,22 @@
       <input
         matInput
         type="number"
-        [(ngModel)]="selected.position.y"
+        [(ngModel)]="gameService.selected.position.y"
         name="position-y"
       />
     </mat-form-field>
     <mat-form-field class="example-form-field" appearance="fill">
       <mat-label>Angle</mat-label>
-      <input matInput type="number" [(ngModel)]="selected.angle" name="angle" />
+      <input
+        matInput
+        type="number"
+        [(ngModel)]="gameService.selected.angle"
+        name="angle"
+      />
     </mat-form-field>
-    <mat-checkbox class="example-margin" [(ngModel)]="selected.static"
+    <mat-checkbox
+      class="example-margin"
+      [(ngModel)]="gameService.selected.static"
       >Static</mat-checkbox
     >
   </mat-card-content>
